--- a/packer/files-prov/template/Vagrantfile
+++ b/packer/files-prov/template/Vagrantfile
@@ -25,8 +25,17 @@ Vagrant.configure("2") do |config|
         vb.customize ["modifyvm", :id, "--vram", 256 ]
       end
 
+      # disable vbguest update
+      machine.vbguest.auto_update = false
+
+      # forwarding ports
+      machine.vm.network "forwarded_port", id: "rdp",  auto_correct: true, protocol: "tcp", guest: 3389, host: 33333, host_ip: "127.0.0.1"
+
+      # define synced directory
+      machine.vm.synced_folder "../packer/files-prov", "/file-prov"
+
       # file provisioning
-      machine.vm.provision "file", source: "../packer/files-prov", destination: "/home/vagrant/files-prov"
+      machine.vm.provision "file", source: "../packer/files-prov", destination: "/Users/vagrant/files-prov"
       
       # shell provisioning
       scriptlist.each { |scriptpath|
