--- a/packer/files-prov/template/Vagrantfile
+++ b/packer/files-prov/template/Vagrantfile
@@ -45,6 +45,13 @@ Vagrant.configure("2") do |config|
         end        
       }
 
+      # reboot instance
+      config.vm.provision :shell do |shell|
+        shell.privileged = true
+        shell.inline = 'echo rebooting ...'
+        shell.reboot = true
+      end
+
     end   
 
 end
