--- a/packer/files-prov/template/Vagrantfile
+++ b/packer/files-prov/template/Vagrantfile
@@ -32,8 +32,8 @@ Vagrant.configure("2") do |config|
       machine.vm.network "forwarded_port", id: "rdp",  auto_correct: true, protocol: "tcp", guest: 3389, host: 33333, host_ip: "127.0.0.1"
 
       # define synced directory
-      machine.vm.synced_folder "../packer/files-prov", "/file-prov"
-      machine.vm.synced_folder "%ProgramFiles%/Oracle/VirtualBox", "/guestaddition"
+      machine.vm.synced_folder "../packer/files-prov", "/files-prov"
+      machine.vm.synced_folder "#{ENV["ProgramFiles"]}/Oracle/VirtualBox", "/guestaddition"
 
       # file provisioning
       machine.vm.provision "file", source: "../packer/files-prov", destination: "/Users/vagrant/files-prov"
