--- a/test/download/Vagrantfile
+++ b/test/download/Vagrantfile
@@ -1,8 +1,4 @@
-# create git tag
 
-$src_image_version = $env:IMAGE_VERSION
-
-$vagrant_file_template = '
 Vagrant.configure("2") do |config|
 
   $basebox_name="elegoev-win-2019-test"
@@ -12,7 +8,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "#{$basebox_name}" do |machine|
     machine.vm.box = "#{$src_image_name}"
-    machine.vm.box_version = "$image_version"
+    machine.vm.box_version = "1.0.1616426817"
     
     # define guest hostname
     machine.vm.hostname = "#{$basebox_hostname}"
@@ -39,20 +35,4 @@ Vagrant.configure("2") do |config|
   end   
 
 end
-'
-
-# create Vagrantfile for download test
-$vagrant_file_expanded = $vagrant_file_template.Replace('$image_version', "$src_image_version")
-Set-Content -Path './test/download/Vagrantfile' -Value "$vagrant_file_expanded"
-
-# create git tag
-git add --all
-git commit -m "new basebox version $src_image_version"
-git push 
-git tag $src_image_version
-git push --tags
-
-
-
-
 
